@@ -22,27 +22,38 @@ import org.antlr.runtime.tree.*;
 
 public class $className extends TestCase {
 
-  private QTestUtil qt;
+  private static QTestUtil qt;
+
+  static {
+    try {
+      boolean miniMR = false;
+      String hadoopVer;
+      if ("$clusterMode".equals("miniMR"))
+        miniMR = true;
+      hadoopVer = "$hadoopVersion";
+      qt = new QTestUtil("$resultsDir.getCanonicalPath()", "$logDir.getCanonicalPath()", miniMR, hadoopVer);
+
+      // do a one time initialization
+      qt.cleanUp();
+      qt.createSources();
+
+    } catch (Exception e) {
+      System.out.println("Exception: " + e.getMessage());
+      e.printStackTrace();
+      System.out.flush();
+      fail("Unexpected exception in static initialization");
+    }
+  }
 
   public $className(String name) {
     super(name);
-    qt = null;
   }
 
   @Override
   protected void setUp() {
     try {
-      boolean miniMR = false;
-      String hadoopVer;
-
-      if ("$clusterMode".equals("miniMR"))
-        miniMR = true;
-      hadoopVer = "$hadoopVersion";
-
-      qt = new QTestUtil("$resultsDir.getCanonicalPath()", "$logDir.getCanonicalPath()", miniMR, hadoopVer);
-
-    }
-    catch (Exception e) {
+      qt.clearTestSideEffects();
+    } catch (Exception e) {
       System.out.println("Exception: " + e.getMessage());
       e.printStackTrace();
       System.out.flush();
@@ -50,10 +61,18 @@ public class $className extends TestCase {
     }
   }
 
+  /**
+   * Dummy last test. This is only meant to shutdown qt
+   */
+  public void testCliDriver_shutdown() {
+    System.out.println ("Cleaning up " + "$className");
+  }
+
   @Override
   protected void tearDown() {
     try {
-      qt.shutdown();
+      if (getName().equals("testCliDriver_shutdown"))
+        qt.shutdown();
     }
     catch (Exception e) {
       System.out.println("Exception: " + e.getMessage());
@@ -71,6 +90,7 @@ public class $className extends TestCase {
   #set ($tname = $fname.substring(0, $eidx))
     suite.addTest(new $className("testCliDriver_$tname"));
 #end
+    suite.addTest(new $className("testCliDriver_shutdown"));
     return suite;
   }
 
@@ -91,7 +111,7 @@ public class $className extends TestCase {
         return;
       }
       
-      qt.cliInit("$fname");
+      qt.cliInit("$fname", false);
       int ecode = qt.executeClient("$fname");
       if (ecode != 0) {
         fail("Client Execution failed with error code = " + ecode + debugHint);
